--- a/images-for-devfiles/ansible-navigator/Dockerfile
+++ b/images-for-devfiles/ansible-navigator/Dockerfile
@@ -38,14 +38,17 @@ RUN chmod a+rwx /.config
 RUN useradd podman
 RUN adduser sudo
 RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
-# echo podman:10000:5000 > /etc/subuid; \
-# echo podman:10000:5000 > /etc/subgid;
+RUN echo podman:10000:5000 > /etc/subuid; \
+echo podman:10000:5000 > /etc/subgid;
 
-# RUN echo 1000660000:10000:5000 >> /etc/subuid; \
-# echo 1000660000:10000:5000 >> /etc/subgid;
+RUN echo sudo:10000:5000 > /etc/subuid; \
+echo sudo:10000:5000 > /etc/subgid;
 
-# RUN echo 1000650000:10000:5000 >> /etc/subuid; \
-# echo 1000650000:10000:5000 >> /etc/subgid;
+RUN echo 1000660000:10000:5000 >> /etc/subuid; \
+echo 1000660000:10000:5000 >> /etc/subgid;
+
+RUN echo 1000650000:10000:5000 >> /etc/subuid; \
+echo 1000650000:10000:5000 >> /etc/subgid;
 
 
 
