--- a/images-for-devfiles/ansible-navigator/Dockerfile
+++ b/images-for-devfiles/ansible-navigator/Dockerfile
@@ -17,8 +17,8 @@ LABEL io.openshift.expose-services=""
 # Don't include container-selinux and remove
 # directories used by yum that are just taking
 # up space.
-RUN dnf -y module enable container-tools:rhel8; dnf -y update; rpm --restore --quiet shadow-utils; \
-dnf -y install sudo crun podman fuse-overlayfs /etc/containers/storage.conf --exclude container-selinux; \
+RUN dnf -y module enable container-tools:rhel8; dnf -y update; \
+dnf -y install shadow-utils sudo crun podman fuse-overlayfs iptables /etc/containers/storage.conf --exclude container-selinux; \
 rm -rf /var/cache /var/log/dnf* /var/log/yum.*
 
 RUN dnf install -y -q curl vim python3 policycoreutils python3-policycoreutils yum-utils
@@ -31,9 +31,9 @@ RUN mkdir /.cache
 RUN chmod a+rwx /.cache
 RUN mkdir /.config
 RUN chmod a+rwx /.config
-# RUN chmod a+rwx /usr/bin/newgidmap
-# RUN chmod a+rwx /usr/bin/newuidmap
-# RUN chmod a+rwx /usr/bin/fuse-overlayfs
+RUN chmod a+rwx /usr/bin/newgidmap
+RUN chmod a+rwx /usr/bin/newuidmap
+RUN chmod a+rwx /usr/bin/fuse-overlayfs
 
 RUN useradd podman
 RUN adduser sudo
