--- a/images-for-devfiles/ansible-navigator/Dockerfile
+++ b/images-for-devfiles/ansible-navigator/Dockerfile
@@ -24,7 +24,7 @@ rm -rf /var/cache /var/log/dnf* /var/log/yum.*
 RUN dnf install -y -q curl vim python3 policycoreutils python3-policycoreutils yum-utils
 RUN pip3 install setuptools==45.2.0 ansible-navigator==1.1.0 ansible-builder==1.0.1
 
-RUN chmod a+rwx -R /
+RUN chmod a+rwx /
 RUN mkdir /.local
 RUN chmod a+rwx /.local
 RUN mkdir /.cache
