--- a/images-for-devfiles/ansible-navigator/Dockerfile
+++ b/images-for-devfiles/ansible-navigator/Dockerfile
@@ -40,15 +40,15 @@ RUN useradd podman
 RUN echo podman:10000:5000 > /etc/subuid; \
 echo podman:10000:5000 > /etc/subgid;
 
-RUN echo 1000660000:10000:5000 >> /etc/subuid; \
-echo 1000660000:10000:5000 >> /etc/subgid;
+# RUN echo 1000660000:10000:5000 >> /etc/subuid; \
+# echo 1000660000:10000:5000 >> /etc/subgid;
 
-RUN echo 1000650000:10000:5000 >> /etc/subuid; \
-echo 1000650000:10000:5000 >> /etc/subgid;
+# RUN echo 1000650000:10000:5000 >> /etc/subuid; \
+# echo 1000650000:10000:5000 >> /etc/subgid;
 
 
-RUN echo 1000670000:10000:5000 >> /etc/subuid; \
-echo 1000670000:10000:5000 >> /etc/subgid;
+# RUN echo 1000670000:10000:5000 >> /etc/subuid; \
+# echo 1000670000:10000:5000 >> /etc/subgid;
 
 
 
