--- a/codeready-workspaces-devfileregistry/devfiles/07_ansible_collection_devfile_v2/devfile.yaml
+++ b/codeready-workspaces-devfileregistry/devfiles/07_ansible_collection_devfile_v2/devfile.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: 1.0.0
+apiVersion: 2.1.0
 metadata:
   generateName: ansible-collection-
 projects:
@@ -27,18 +27,18 @@ components:
   image: image-registry.openshift-image-registry.svc:5000/openshift-workspaces/ansible-test-image
   memoryLimit: 2Gi
   mountSources: true
-# -
-#   type: dockerimage
-#   alias: ansible-navigator
-#   image: image-registry.openshift-image-registry.svc:5000/openshift-workspaces/ansible-navigator-image
-#   memoryLimit: 4Gi
-#   mountSources: true
-# -
-#   type: dockerimage
-#   alias: ansible-runner
-#   image: image-registry.openshift-image-registry.svc:5000/openshift-workspaces/ansible-runner-image
-#   memoryLimit: 2Gi
-#   mountSources: true
+-
+  type: dockerimage
+  alias: ansible-navigator
+  image: image-registry.openshift-image-registry.svc:5000/openshift-workspaces/ansible-navigator-image
+  memoryLimit: 4Gi
+  mountSources: true
+-
+  type: dockerimage
+  alias: ansible-runner
+  image: image-registry.openshift-image-registry.svc:5000/openshift-workspaces/ansible-runner-image
+  memoryLimit: 2Gi
+  mountSources: true
 -
   type: dockerimage
   alias: ansible-playbook
@@ -97,10 +97,10 @@ commands:
       workdir: "${CHE_PROJECTS_ROOT}/ansible-collection-template/ansible_collections/namespace_example/collection_example"
 
 
-# -
-#   name: 6. Execute coverage
-#   actions:
-#     - type: exec
-#       component: ansible-navigator
-#       command: "ansible-navigator --cdcp collection_doc_cache.db"
-#       workdir: "${CHE_PROJECTS_ROOT}/ansible-collection-template/ansible_collections/namespace_example/collection_example"
+-
+  name: 6. Execute coverage
+  actions:
+    - type: exec
+      component: ansible-navigator
+      command: "ansible-navigator --cdcp collection_doc_cache.db"
+      workdir: "${CHE_PROJECTS_ROOT}/ansible-collection-template/ansible_collections/namespace_example/collection_example"
