--- a/codeready-workspaces-devfileregistry/devfiles/07_ansible_collection/devfile.yaml
+++ b/codeready-workspaces-devfileregistry/devfiles/07_ansible_collection/devfile.yaml
@@ -104,3 +104,11 @@ commands:
 #       component: ansible-navigator
 #       command: "ansible-navigator --cdcp collection_doc_cache.db"
 #       workdir: "${CHE_PROJECTS_ROOT}/ansible-collection-template/ansible_collections/namespace_example/collection_example"
+
+-
+  name: 6. Execute coverage
+  actions:
+    - type: exec
+      component: ansible-playbook
+      command: "ansible-playbook --cdcp collection_doc_cache.db"
+      workdir: "${CHE_PROJECTS_ROOT}/ansible-collection-template/ansible_collections/namespace_example/collection_example"
