--- a/images-for-devfiles/ansible-playbook/Dockerfile
+++ b/images-for-devfiles/ansible-playbook/Dockerfile
@@ -22,17 +22,17 @@ RUN yum install -y -q curl vim policycoreutils python3-policycoreutils yum-utils
 RUN python3 -m pip install --upgrade pip
 RUN python3 -m pip install psutil
 RUN python3 -m venv myvirtual_venv
-RUN chmod 0755 myvirtual_venv
+RUN chmod a+rwx myvirtual_venv
 RUN source myvirtual_venv/bin/activate
 RUN python3 -m pip install --upgrade pip
 RUN python3 -m pip install setuptools==45.2.0 ansible==5.3.0
 RUN python3 -m venv myvirtual_venv2
-RUN chmod 0755 myvirtual_venv2
+RUN chmod a+rwx myvirtual_venv2
 RUN source myvirtual_venv2/bin/activate
 RUN python3 -m pip install --upgrade pip
 RUN python3 -m pip install setuptools==45.2.0 ansible==2.9.0
 RUN python3 -m venv myvirtual_venv3
-RUN chmod 0755 myvirtual_venv3
+RUN chmod a+rwx myvirtual_venv3
 RUN source myvirtual_venv3/bin/activate
 RUN python3 -m pip install --upgrade pip
 RUN python3 -m pip install setuptools==45.2.0 ansible==5.3.0
